# iscc-did-driver

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish-docker-image.yaml  publish.yaml  test-backend.yaml  tests.yaml
iscc_did_driver/: __init__.py  aliases.json  controlers.py  controllers.py  did.abnf  format.py  index.html  main.py  openapi.yaml  options.py  schema.py
tests/: conftest.py  test_identifiers.py  test_schema.py
